move download from transaction to payment